@@ -28,8 +28,8 @@ requires 'namespace::clean' => 0;
 requires 'perl' => '5.8.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Map-Tube-Samara';
-resources 'homepage' => 'https://github.com/tupinek/Map-Tube-Samara';
-resources 'repository' => 'git://github.com/tupinek/Map-Tube-Samara';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Map-Tube-Samara';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Map-Tube-Samara';
 test_requires 'Encode' => 0;
 test_requires 'English' => 0;
 test_requires 'Test::Map::Tube' => 0.35;
