@@ -213,7 +213,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Samara>
+    <https://github.com/michal-josef-spacek/Map-Tube-Samara>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
